fix nav flicker

--- a/app/styles/settings.scss
+++ b/app/styles/settings.scss
@@ -37,7 +37,6 @@
 }
 
 .settings-nav {
-  display: flex;
   align-items: center;
   gap: var(--spacing-100, 0.5rem);
   align-self: stretch;
